objects/AccountObservation__c.object
<CustomObject>
    <description>Account Observations is a custom object used to record and manage user-inputted records for Account-specific and Account-Contact Observations.</description>
    <fields>
        <fullName>Account_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account Objective linked to this Account Observation record.</description>
        <inlineHelpText>The Account Objective linked to this Account Observation record.</inlineHelpText>
        <label>Account Objective</label>
        <referenceTo>AccountObjective__c</referenceTo>
        <relationshipName>Account_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Observation_Type__c</fullName>
        <description>Designates the Type of Account Observation. Strengths are where we excel above the competition. Weaknesses are where we perform suboptimally. An Opportunity is a favorable external factor that give us a competitive advantage. And a Threat is a unfavorable external factor that put us at a disadvantage.</description>
        <inlineHelpText>Strengths are where we excel above the competition. Weaknesses are where we perform suboptimally. An Opportunity is a favorable external factor that give us an advantage. And a Threat is a unfavorable external factor that put us at a disadvantage.</inlineHelpText>
        <label>Account Observation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strength</fullName>
                </value>
                <value>
                    <fullName>Weakness</fullName>
                </value>
                <value>
                    <fullName>Threat</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>Opportunity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Account_Observations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The linked Account Solution for this Account Observation.</description>
        <inlineHelpText>The linked Account Solution for this Account Observation.</inlineHelpText>
        <label>Account Solution</label>
        <referenceTo>AccountSolution__c</referenceTo>
        <relationshipName>Account_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account Contact linked to this Analysis record.</description>
        <inlineHelpText>The Account Contact linked to this Analysis record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the Account Observation record from the point of view of your customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the Account Observation record from the point of view of your customer.</inlineHelpText>
        <label>Evidence/Impact</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factor_Type__c</fullName>
        <label>Factor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Category__c</fullName>
        <label>Impact Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits</fullName>
                    <label>Customer Benefits</label>
                </value>
                <value>
                    <fullName>Relationships</fullName>
                    <label>Customer Relationships</label>
                </value>
                <value>
                    <fullName>Profitability</fullName>
                    <label>Our Profitability</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Value__c</fullName>
        <description>The relative value of this observation as aligned with the Impact Type of the linked standard Analysis value.</description>
        <inlineHelpText>The relative value of this observation as aligned with the Impact Type of the linked standard Analysis value.</inlineHelpText>
        <label>Impact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>A detailed description of the impact that the Account Observation has on your company and its relationship with your customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the impact that the Account Observation has on your company and its relationship with your customer.</inlineHelpText>
        <label>Impact</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Observation library value linked to this Account Observation record.</description>
        <inlineHelpText>The Observation library value linked to this Account Observation record.</inlineHelpText>
        <label>Observation Library</label>
        <referenceTo>SalesObservation__c</referenceTo>
        <relationshipName>Account_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Observation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Observation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>The ranked importance of this Account Observation relative to this Account Plan.</description>
        <inlineHelpText>The ranked importance of this Account Observation relative to this Account Plan.</inlineHelpText>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Relevant</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strength</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Threat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weakness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weakness</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Observation (SWT)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Observation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Observations (SWT)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>